# DeepExoMir

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  REPRODUCIBILITY.md  ZENODO_UPLOAD_GUIDE.md  pyproject.toml  requirements.txt  setup_env.ps1  setup_env.sh  verify_setup.py
app/: app.py
configs/: data_config.yaml  model_config.yaml  model_config_v10_final.yaml  model_config_v10_ultimate.yaml  model_config_v10c_6chbp.yaml  model_config_v10plus.yaml  model_config_v11a.yaml  model_config_v11b.yaml  model_config_v12.yaml  model_config_v13.yaml  model_config_v13alt.yaml  model_config_v13alt2L.yaml  model_config_v14.yaml  model_config_v14alt.yaml  model_config_v14alt2L.yaml  model_config_v14alt3L.yaml  model_config_v15.yaml  model_config_v16a.yaml  model_config_v16c.yaml  model_config_v18.yaml  model_config_v19.yaml  model_config_v20.yaml  model_config_v22.yaml  model_config_v8.yaml  model_config_v8_pca256.yaml  model_config_v8_pca384.yaml  train_config.yaml  train_config_v10_combined1.yaml  train_config_v10_combined2.yaml  train_config_v10_combined3.yaml  train_config_v10_final.yaml  train_config_v10_ultimate.yaml  train_config_v10a.yaml  train_config_v10c.yaml  train_config_v10plus.yaml  train_config_v11.yaml  train_config_v12.yaml  train_config_v13.yaml  train_config_v13alt.yaml  train_config_v13alt2L.yaml  (+25 more)
deepexomir/: __init__.py  benchmark.py  config.py  predict.py
manuscript/: cover_letter_bmc.tex  deepexomir_bioinformatics.md  deepexomir_bioinformatics.tex  deepexomir_bmc.tex
notebooks/: 01_quickstart.ipynb
scripts/: evaluate.py  (+25 more)
(+47 files in other folders)
